@startuml

title __PATIENT's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.patient {
      class ImportantPatient {
          + ImportantPatient()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.patient {
      abstract class Patient {
          - id : long
          - firstName : String
          - lastName : String
          - age : int
          - priority : int
          - isHealthy : boolean
          + isHealthy()
          + setHealthy()
          + getPriority()
          + setPriority()
          + getId()
          + setId()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
          + getAge()
          + setAge()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.patient {
      class SimplePatient {
          + SimplePatient()
      }
    }
  }
  

  ImportantPatient -up-|> Patient
  SimplePatient -up-|> Patient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
